Change homepage to personal repository

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "askisers-react",
-  "homepage": "https://eecs330-section69-askisers.github.io/askisers-react",
+  "homepage": "https://faraaz-beyabani.github.io/Askisers-Class-Participation/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
